# PDF2JSON

./: .dockerignore  .gitignore  API_ANALYTICS_SUMMARY.md  DOCKER.md  Dockerfile  LICENSE  QUICKSTART_API_ANALYTICS.md  README.md  STRUCTURED_INPUT_FORMAT.md  api_docs.py  database_manager.py  dev-requirements.txt  docker-compose.yml  mcp_github_server.py  mcp_server.py  mcp_web_interface.py  migrate_paths.sh  pre-commit-check.sh  pyproject.toml  pytest.ini  quickstart.sh  requirements.txt  run_github_mcp_server.sh  run_mcp_server.sh  run_tests.sh  setup_github_mcp.sh  validate_docker.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
config/: env.example
docs/: API_ANALYTICS_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  EXCEL_TO_PDF_GUIDE.md  GENERIC_FEATURES.md  GITHUB_MCP_INTEGRATION.md  GITHUB_MCP_QUICKREF.md  GITHUB_MCP_SUMMARY.md  INDEX.md  INTEGRATION_EXAMPLES.md  MCP_INTEGRATION.md  MULTI_CATEGORY_GUIDE.md  PROJECT_STRUCTURE.md  PUBLISHING.md  STRUCTURED_INPUT_FORMAT.md  TESTING.md
examples/: github_mcp_demo.py
scripts/: EXAMPLES.md  README.md  USAGE.md  convert_to_structured_json.py  create_alternative_formats.py  create_master_database.py  dsr_extractor.py  dsr_matcher.py  dsr_rate_extractor.py  excel_to_pdf.py  excel_to_pdf_native.py  extraction_utils.py  input_file_converter.py  logging_utils.py  match_dsr_rates_sqlite.py  read_json.py  text_similarity.py  update_dsr_database.py  update_dsr_database.py.broken
src/estimatex/: __init__.py  cli.py  helpers.py  logging_config.py  web.py
src/pdf2json/: __init__.py  cli.py  converter.py  helpers.py  logging_config.py  web.py
templates/: 404.html  500.html  analytics_dashboard.html  api_docs.html  base.html  cost_estimation.html  database_manager.html  excel_converter.html  index.html  mcp_interface.html  search.html  search_results.html  table.html  upload.html  view.html  view_csv.html  view_markdown.html  view_report.html
tests/: README.md  __init__.py  conftest.py  test_analytics.py  test_cli.py  test_convert_to_structured_json_comprehensive.py  test_converter.py  test_converter_expanded.py  test_create_master_database_comprehensive.py  test_database_operations.py  test_database_operations_expanded.py  test_dsr_integration.py  test_dsr_matcher.py  test_dsr_matcher_expanded.py  test_dsr_modules_comprehensive.py  test_dsr_rate_extractor.py  test_dsr_rate_extractor_expanded.py  test_excel_converter.py  test_excel_modules_expanded.py  test_excel_to_pdf.py  test_extraction_utils.py  test_helpers.py  test_helpers_comprehensive.py  test_helpers_expanded.py  test_input_converter.py  test_input_file_converter_comprehensive.py  test_logging_config.py  test_read_json.py  test_structured_json_converter.py  test_text_similarity.py  test_update_dsr_database_comprehensive.py  test_web_comprehensive.py  test_web_integration.py  test_web_interface.py  test_web_interface_expanded.py
